<resources>
    <string name="app_name">Quiz App</string>

    <string name="quiz_text">Quizy!</string>
    <string name="bottom_text">Isn\'t life a collection of weird quizzes with no answers to half of the questions!</string>
    <string name="button_text">Get Started</string>
    <string name="login_heading">Login Now</string>
    <string name="login_bottom">Please login to continue using the app</string>
    <string name="login_button">login</string>
    <string name="login_btn_text">Don\'t have an account? Sign up!</string>
    <string name="password_txt">Password</string>
    <string name="confirm_password_txt">Confirm Password</string>
    <string name="sign_up_heading">Sign Up Here</string>
    <string name="sign_up_bottom">Enter details here</string>
    <string name="email_txt">Email</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_up_btn_text">Already have an account? Log in</string>
    <string name="sign_up_error_toast">Error creating user!</string>
    <string name="page_title">Dashboard</string>
    <string name="dashboard_sub_heading">Quiz here!</string>
    <string name="menu_item_follow_us">Follow us</string>
    <string name="menu_item_signout">Signout</string>
    <string name="menu_item_know">Know more</string>
    <string name="text_recycler_view">Quiz Day 1</string>

</resources>